# kinematic_coder

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  storage.rs
src/kinematics/: inversed_kinematics.rs  leg_synchronizer.rs  mod.rs  realtime_kinematics.rs  robot_skeleton.rs
src/robot_configuration/: kinematics_config.rs  leg_config.rs  mod.rs  motor_config.rs  robot_config.rs
src/ui/: mod.rs  window.rs
src/ui/ui_components/: file_selector.rs  inputs.rs  mesh_selector.rs  mod.rs  project_loading_tooltip.rs  properties_menu.rs  properties_menu_listener_handlers.rs  robot_config_tree.rs  robot_config_tree_listener_handlers.rs  robot_scene.rs  toolbar.rs
