workspace = { members = ["src/deps/dynamic_data_storage", "src/deps/glass_panel"] }

[package]
name = "kinematic_flow"
version = "0.1.0"
edition = "2021"

[build-dependencies]
rust_build_buddy = { git="https://gitlab.com/RenzoGerritzenSaxion/rust-build-buddy.git", version="0.1.15" }

[dependencies]
dynamic_data_storage = { path="src/deps/dynamic_data_storage" }
glass_panel = { path="src/deps/glass_panel" } # Add a local version so the project can stay private for now

rfd = "0.14.0"